--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "nodemon": "^3.0.1",
+    "prisma": "^5.0.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express-session": "^1.17.7",
     "@types/passport": "^1.0.12",
