--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "baseUrl": ".",
       "paths": {
         "src/*": ["./src/*"],
+        "api/*": ["./src/routers/api/*"]
       }
     }
   }
